syntax = "proto3";

package com.iclouding.mfs.rpc.namenode;

option java_multiple_files = true;
option java_package = "com.iclouding.mfs.rpc.namenode.model";
option java_outer_classname = "StandbyNameNodeProtol";
option java_generate_equals_and_hash = true;

message FetchEditLogRequest {
    int64 begin_txid = 1;
    int32 fetch_size = 2;
}

message FetchEditLogResponse {
    int32 status = 1;
    int64 begin_txid = 2;
    // 存放editlogs的
    repeated string edit_logs = 3;
    // 获取editlog的数量
    int32 fetch_size = 4;
    // 是否还有后续editlog
    bool has_more = 5;
    // 异常时提示消息
    string message = 6;
}