syntax = "proto3";

package com.iclouding.mfs.rpc.namenode;
option java_multiple_files = true;
option java_package = "com.iclouding.mfs.rpc.namenode.service";
option java_outer_classname = "StandbyNameNodeServer";
option java_generate_equals_and_hash = true;

import "StandByNameNodeProtol.proto";

service StandbyNameNodeService{
  rpc fetchEditLogs(FetchEditLogRequest) returns (FetchEditLogResponse);
}